# nepad

./: CONTRIBUTORS.md  LICENSE  README.md  index.html  package-lock.json  package.json  run_dev.bat
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  edge-strip.json  pan-worker.json  reminder-toast.json  timer-toast.json
src-tauri/icons/: icon.icns
src-tauri/resources/: vat-extractor-standalone.html
src-tauri/src/: lib.rs  main.rs
src/lib/: calendar.ts  converter.ts  dates.ts  dragReorder.ts  edgeStrip.ts  holidays.ts  journal.ts  notes.ts  pan.ts  pendingOverview.ts  reminderToast.ts  reminders.ts  revenueCodes.ts  revenueCodesData.ts  settings.ts  store.ts  tasks.ts  tdsExtractor.ts  timer.ts  timerToast.ts  tools.ts  updater.ts  vatExtractor.ts
src/lib/tds/: digits.ts  index.ts  parseHtml.ts  parseLines.ts  parsePdf.ts  parseZip.ts  types.ts
